# afri_mesh

./: Cargo.toml  README.md
docs/: index.html  script.js  style.css
src/: app.rs  error.rs  lib.rs  main.rs  network.rs  ui.rs
tests/: latency_test.rs  stability_test.rs  throughput_test.rs
