[package]
name = "edu_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.36", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
libp2p = { version = "0.53", features = ["tcp", "dns", "quic", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"